--- a/index.html
+++ b/index.html
@@ -3,95 +3,100 @@
 <head>
 	<meta charset="UTF-8">
 	<title>index-maker</title>
+	<link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./css/page-index.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script src="./js/page-index.js"></script>
 </head>
 <body>
 
-<div class="page-index">
 
-</div>
+	<div class="row">
 
-<h1>タイトル</h1>
+		<div class="page-index col-sm-2 sidebar">
 
-	<h2>見出し1</h2>
-	<br>
-	<br>
-		<h3>小見出し1-1</h3>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-		<h3>小見出し1-2</h3>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-		<h3>小見出し1-3</h3>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
+		</div>
 
-	<h2>見出し2</h2>
-		<h3>小見出し2-1</h3>
-		<h3>小見出し2-2</h3>
-		<h3>小見出し2-3</h3>
+		<div class="col-sm-10 main col-sm-offset-2">
+			<h1>タイトル</h1>
+			<h2>見出し1</h2>
+			<br>
+			<br>
+			<h3>小見出し1-1</h3>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<h3>小見出し1-2</h3>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<h3>小見出し1-3</h3>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<h2>見出し2</h2>
+			<h3>小見出し2-1</h3>
+			<h3>小見出し2-2</h3>
+			<h3>小見出し2-3</h3>
+			<h2>見出し3</h2>
+			<h3>小見出し3-1</h3>
+			<h3>小見出し3-2</h3>
+			<h3>小見出し3-3</h3>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+			<br>
+		</div>
+	</div>
 
-	<h2>見出し3</h2>
-		<h3>小見出し3-1</h3>
-		<h3>小見出し3-2</h3>
-		<h3>小見出し3-3</h3>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script src="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+	<script src="./js/page-index.js"></script>
 </body>
 </html>
